--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "mongoose": "^8.7.2",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
